# libxs

./: .abi.txt  .analyze.sh  .buildkite.env  .codecov  .coverage  .env  .flock.sh  .fullci  .gitattributes  .gitignore  .gitmodules  .mktmp.sh  .packit.yaml  .scan.sh  .state.sh  .test-conv.yml  .test-dnn-fullci  .test-fc.yml  .test-rnn-fullci  .travis.sh  CMakeLists.txt  LICENSE  LICENSE.md  Makefile  Makefile.inc  README.md  README.sh  build.sh  fpm.toml  generate_inc.py  mkdocs.yml  xsmm_knc_geninc.py  xsmm_knc_genmain.py
.github/workflows/: gcc.yml  mac.yml  makefile.yml
.gitx/: install.sh  post-commit  prepare-commit-msg
.hooks/: post-commit  pre-commit  prepare-commit-msg  version.sh
.theme/: ford.py  ford_hook.py  hook.py  main.html  requirements.txt
cmake/: libxs.pc.in
documentation/: .gitignore  Doxyfile.in  README.md  conf.py  index.md  index.rst  libxs_api.md  libxs_aux.md  libxs_cpuid.md  libxs_dl.md  libxs_dnn.md  libxs_fortran.md  libxs_gemm.md  libxs_hash.md  libxs_hist.md  libxs_malloc.md  libxs_math.md  libxs_mem.md  libxs_mhd.md  libxs_mm.md  libxs_perf.md  libxs_perm.md  libxs_predict.md  libxs_present.md  libxs_reg.md  libxs_rng.md  libxs_scripts.md  libxs_str.md  libxs_sync.md  libxs_timer.md  libxs_token.md  libxs_tune.md  libxs_utils.md  tensorflow.md  tfserving.md
documentation/ozaki/: .gitignore  index.md  ozaki.py  requirements.txt
documentation/predict/: custom.css  index.md  requirements.txt
documentation/samples/: libxs_converse.md  libxs_fprint.md  libxs_gemm.md  libxs_memory.md  libxs_ozaki.md  libxs_predict.md  libxs_registry.md  libxs_rosetta.md  libxs_scratch.md  libxs_shuffle.md  libxs_spatial.md  libxs_sync.md  libxs_tokenizer.md
include/: libxs.f  libxs.h  libxs_bgemm.h  libxs_blkgemm.h  libxs_blocked_gemm.h  libxs_conv.h  libxs_cpuid.h  libxs_dnn.h  libxs_dnn_convolution.h  libxs_dnn_fullyconnected.h  libxs_dnn_fusedbatchnorm.h  libxs_dnn_fusedbn.h  libxs_dnn_fusedgroupnorm.h  libxs_dnn_grucell.h  libxs_dnn_lstmcell.h  libxs_dnn_optimizer.h  libxs_dnn_pooling.h  libxs_dnn_rnncell.h  libxs_dnn_softmaxloss.h  libxs_dnn_tensor.h  libxs_fallback.h  libxs_frontend.h  libxs_gemm.h  libxs_hash.h  libxs_hist.h  libxs_isa.h  libxs_lpflt_quant.h  libxs_macros.h  libxs_malloc.h  libxs_math.h  libxs_mem.h  libxs_mhd.h  libxs_perm.h  libxs_predict.h  libxs_prefetch.h  libxs_reg.h  libxs_rng.h  libxs_sort.h  libxs_source.h  libxs_spmdm.h  (+9 more)
libxs/: .gitignore  libxs.f  libxs.h  libxs_cpuid.h  libxs_gemm.h  libxs_hash.h  libxs_hist.h  libxs_jit.F  libxs_jit_spec.fi  libxs_macros.h  libxs_malloc.h  libxs_math.h  libxs_mem.h  libxs_mhd.h  libxs_ngram.h  libxs_perm.h  libxs_predict.h  libxs_procs.fi  libxs_reg.h  libxs_rng.h  libxs_source.h  libxs_spec.fi  libxs_str.h  libxs_sync.h  libxs_timer.h  libxs_token.h  libxs_utils.h
samples/: Makefile  smm.cpp
samples/barrier/: Makefile  barrier.c
samples/bgemm/: Makefile  bgemm.c  bgemm.sh  perfSweep.sh  run_bench.sh
samples/blas/: Makefile  blas.cpp
samples/blkgemm/: Makefile  block_gemm.c  block_xgemm.h
samples/blocked_gemm/: Makefile  blocked_gemm.c  perfSweep.sh  run_bench.sh
samples/converse/: .gitignore  Makefile  README.md  converse.c  converse.h  summarize.c
samples/convolution/: convolution.c
samples/dgemm/: Makefile  README.md  dgemm-test.sh  dgemm.c  test.sh
samples/dispatched/: Makefile  dispatched.cpp
samples/dnn/: Makefile  fwd_layer_example.c  layer_example_f32.c  layer_example_fp32.c  layer_example_i16.c  layer_example_i16f32.c  layer_example_i16i32.c  layer_example_i8i16.c  layer_example_i8i32.c  layer_example_int16.c  layer_example_qi16f32.c  resnet_job_ntrb_fwd  run_alexnet.sh  run_dcgan.sh  run_deepbench.sh  run_googlenetv1.sh  run_googlenetv3.sh  run_overfeat.sh  run_resnet50.sh  run_resnet50_mock.sh  run_resnet50b.sh  run_vgga.sh  run_vgga_4k.sh  run_vgga_hd.sh
samples/fprint/: Makefile  fprint.c
samples/gemm/: Makefile  README.md  gemm_batch.c  gemm_groups.c  gemm_index.F  gemm_index.c  gemm_index.f  gemm_strided.c
samples/iconv/: Makefile  README.md  iconv.c
samples/inlined/: Makefile  inlined.cpp
samples/jit_generator/: jit_validation.c
samples/jit_matcopy/: Makefile  jit_matcopy.c
samples/jit_transpose/: Makefile  jit_transpose.c
samples/lstm/: Makefile  lstm.c
samples/memcmp/: Makefile  memcmp.c  (+1 more)
scripts/: README.md  generate_ben.py  generate_inc.py  generate_main.py  generate_src.py  igemm.c  libxsConfig.cmake  libxsConfig.cmake.in  libxs_source.sh  libxs_version.sh  md2pptx.py  tool_addforks.sh  tool_aheadforks.sh  tool_analyze.sh  tool_checkabi.sh  tool_cpuinfo.sh  tool_debugci.sh  tool_getenvars.sh  tool_gitaddforks.sh  tool_gitprune.sh  tool_normalize.sh  tool_perflog.sh  tool_pexec.sh  tool_source.sh  xsmm_knc_geninc.py  xsmm_knc_genmain.py  xsmm_knc_gensrc.py
src/: GeneratorCSC.cpp  GeneratorCSC.hpp  GeneratorDense.cpp  GeneratorDense.hpp  GeneratorDriver.cpp  Reader.hpp  ReaderCSC.cpp  ReaderCSC.hpp  kernel_repeat.tpl.c  kernels_avx1-2_common_dp_asm.hpp  kernels_avx1-2_common_sp_asm.hpp  kernels_avx1_dp_asm.hpp  kernels_avx1_sp_asm.hpp  kernels_avx2_dp_asm.hpp  kernels_avx2_sp_asm.hpp  kernels_avx512_dp_asm.hpp  kernels_avx512_sp_asm.hpp  kernels_avx512knc_dp_asm.hpp  kernels_avx512knc_sp_asm.hpp  kernels_common_asm.hpp  kernels_sse3_dp_asm.hpp  kernels_sse3_sp_asm.hpp  libxs_alloc.c  libxs_alloc.h  libxs_bgemm.c  libxs_bgemm_types.h  libxs_blkgemm.c  libxs_blkgemm.h  libxs_blocked_gemm.c  libxs_blocked_gemm_types.h  libxs_build.c  libxs_build_jit.c  libxs_conv.c  libxs_conv_fwd.c  libxs_conv_fwd.h  libxs_cpuid.c  libxs_cpuid.h  libxs_cpuid_arm.c  libxs_cpuid_rv64.c  libxs_cpuid_x86.c  (+145 more)
tests/: .gitignore  CMakeLists.txt  Makefile  README.md  atomics.c  blas.c  colmajor.c  descriptor.c  diff.c  dispatch.c  dispatch.sh  fprint.c  gemm.sh  hash.c  headeronly.c  headeronly_aux.c  headeronly_aux.cpp  hist.c  init.c  intrinsics.c  jit.c  malloc.c  matdiff.c  math.c  memcmp.sh  memory.c  mhd.c  otrans.c  ozaki.sh  perm.c  registry.c  rowmajor.c  scratch.sh  setdiff.c  syrk.c  syrk.sh  test.sh  threadsafety.c  timer.c  token.c  (+2 more)
(+202 files in other folders)
